docker/ghcr workflow

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -22,7 +22,7 @@
       <section class="card">
         <h2>访问控制</h2>
         <p class="hint">
-          如果你在 <code>config.json</code> 中配置了 <code>api_keys</code>，请先在这里输入 Key（浏览器本地保存，不会上传到服务端）。
+          如果你配置了 <code>AG2API_API_KEYS</code>，请先在这里输入 Key（浏览器本地保存，不会上传到服务端）。
         </p>
         <div class="row">
           <input id="apiKey" class="input" type="password" placeholder="API Key（可为空）" />
