--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -19,6 +19,16 @@
         </div>
       </header>
 
+      <section id="updateBanner" class="card update-banner hidden">
+        <div class="update-banner-row">
+          <div id="updateText" class="hint"></div>
+          <div class="update-banner-actions">
+            <a id="updateLink" class="btn small primary" href="#" target="_blank" rel="noreferrer">前往更新</a>
+            <button id="updateDismiss" class="btn small ghost">忽略</button>
+          </div>
+        </div>
+      </section>
+
       <section class="card">
         <h2>访问控制</h2>
         <p class="hint">
@@ -82,9 +92,10 @@
       </section>
 
       <footer class="footer">
-        <span class="hint">
+        <div class="hint mono" id="versionInfo"></div>
+        <div class="hint">
           API 仍然保持原有路径：Claude <code>/v1/messages</code>，Gemini <code>/v1beta</code>。
-        </span>
+        </div>
       </footer>
     </div>
 
